assets/css/responsive.css
@media only screen and (max-width:1599px)
{.hero-box h2{margin-bottom:30px}}
@media only screen and (max-width:1199px)
{section{padding:12px 0}
.abput .about-img{margin-bottom:30px}
.container{padding:24px}
.about .about-img{min-height:500px;margin-bottom:15px}
.hero-box h2{margin-bottom:20px}
.background{height:901px}
.services .icon-box{margin:12px 0}

}
@media only screen and (max-width:1024px){
    .pricing .box{padding:5px}
    .hero-box h2{margin-bottom:20px}
    .background{height:801px}}
    @media only screen and (max-width:991px){
        #main{margin:0;width:100%}
        .profile{display:none}
        .section-title{padding:20px 0}
        .resume .section-title{margin-top:20px}
        .section-title h2{margin-bottom:10px}
        .container{max-width:100%}
        #hero .container{margin-top:0}
        .hero-img{margin:30px auto}
        .glitch-img-warp{margin:30px auto}
        .hero-box h2{margin-bottom:25px}
        #header .social-links{display:none}
        #header{left:-300px}
        .mobile-nav-toggle{
            display:block;
            position:fixed;
            right:25px;
            top:35px}
            .pricing .box{padding:15px}
            .breadcrumbs{margin-top:60px}
            .breadcrumbs h2{margin:0 0 10px 0}
            .testimonials .testimonial-item p{margin-bottom:0}
            .contact .email-form{margin-top:20px}
            .background{height:701px}
            
        }
            @media only screen and (max-width:769px){
                .hero-img{margin:20px auto}
                .glitch-img-warp{margin:20px auto}
                .about .content ul li{margin-bottom:10px}
                .about .content .count-box{margin-top:10px}
                .about .skills-content{display:block}
                .about .content .count-box span{font-size:28px}
                .about .content .count-box i{font-size:28px}
                .breadcrumbs .d-flex{display:block!important}
                .breadcrumbs ol{display:block}
                .breadcrumbs ol li{display:inline-block}
                .background{height:601px}
                
            }
                @media only screen and (max-width:576px)
                {
                .hero-img{margin:15px auto}
                .glitch-img-warp{margin:15px auto}
                .container{padding:12px}section{padding:6px 0}
                .resume .resume-title{margin:10px;font-size:24px}
                .section-title{padding:30px 0 40px 0;}
                .resume .section-title{margin-top:12px}
                .hero-box h2{margin-bottom:15px}
                .section-title span{display:none}
                .section-title h2{font-size:30px;margin-bottom:200px}
                .section-title p{padding-top: 40px;}
                .hero-box h1{font-size:40px}
                .hero-box h2{text-align:center;margin-bottom:30px}
                .about-img{margin-bottom:10px}
                .about .content ul{margin-bottom:5px}
                .resume-item p{margin-bottom:5px}
                .resume .resume-item ul li{padding-bottom:5px}
                .resume .resume-item ul{margin-bottom:0}
                .resume .resume-item{padding:0 0 10px 15px}
                .resume .resume-item h4{font-size:14px}
                .pricing .box{transform:scale(1);margin:10px 0}
                .portfolio .portfolio-item{margin-bottom:12px}
                .portfolio #portfolio-flters{margin-bottom:12px}
                .about .skills-content{margin-top:12px}
                .about .content .count-box p{padding:5px 0 0 0}
                .about .skills-content .progress{padding:0;height:50px}
                .services .icon-box{padding:15px 0;margin:6px 0;
                    margin-left:90px;}
                .about .content .count-box span{font-size:24px}
                .contact .email-form{margin-top:12px;padding:20px}
                .contact .info-box{margin-top:12px;padding:20px}
                .portfolio-details .portfolio-info{padding:15px}
                .down-content h4{font-size:24px}.background{height:501px}
                
            }
                @media only screen and (max-width:482px){
                    .resume .resume-item h5{padding:5px 10px;font-size:14px}
                    .about .content ul li{margin-bottom:8px}
                    .about .content .count-box{margin-top:5px}
                    .about .content .count-box p{padding:0}
                    .portfolio #portfolio-flters li{margin:0 5px 5px 5px}
                    .back-to-top{height:30px;width:30px}
                    .back-to-top i{font-size:14px}
                    .contact .email-form button[type=submit]{padding:8px 20px}
                    iframe{
                        width:482px;
                        height:280px;
                    }
                    }
                    @media only screen and (max-width:352px){
                        .portfolio-details .portfolio-description h2{font-size:20px}
                        #footer h3{font-size:28px}
                    
                    
                    }
                    .iframe-container{
                        position: relative;
                        width:100%;
                        padding-bottom:56.25%;
                        height: 0;
                    }
                    .iframe-container iframe{
                        position: absolute;
                        top: 0;
                        left: 0;
                        width: 100%;
                        height:100%;
                    }

